--- a/style.css
+++ b/style.css
@@ -2,14 +2,30 @@
    margin: 0;
  }
  div {
-  width: 20px;
-  height: 20px;
-  background-color: tomato;
-  
-  position: absolute; 
+    position: absolute; 
   top: 50%;
   left: 50%;
-  
-  margin-left: -10px;
-  margin-top: -10px;
+  width: 50px;
+  height: 50px;
+  margin-left: -25px;
+  margin-top: -25px;
+
+  background-color: tomato;
+  animation: color-shift 2s 2;
+
+  animation-name: color-shift;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes color-shift {
+   0% {
+     background-color: tomato;
+   }
+   50% {
+     background-color: chartreuse;
+   }
+   100% {
+     background-color: rgb(0, 0, 255);
+   }
 }
