--- a/style.css
+++ b/style.css
@@ -5,27 +5,51 @@
     position: absolute; 
   top: 50%;
   left: 50%;
-  width: 50px;
-  height: 50px;
-  margin-left: -25px;
-  margin-top: -25px;
+  width: 100px;
+  height: 100px;
+  margin-left: -50px;
+  margin-top: -50px;
 
   background-color: tomato;
-  animation: color-shift 2s 2;
 
-  animation-name: color-shift;
-  animation-duration: 3s;
+  /*short*/
+  animation: color-shift 3s infinite alternate ease-in-out;
+/*long*/
+  animation-name: color-shift  move-sideways;
+  animation-duration:5s, 2s;
   animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-delay: 2s, 0s;
+  animation-timing-function: ease-in-out;
 }
-
+div:hover {
+  animation-play-state: paused;
+}
 @keyframes color-shift {
    0% {
      background-color: tomato;
    }
+   25% {
+     background-color: crimson;
+   }
    50% {
      background-color: chartreuse;
+   }
+   67.99%{
+     background-color: darksalmon;
    }
    100% {
      background-color: rgb(0, 0, 255);
    }
+}
+@keyframes  move-sideways {
+  0%{
+    left: 75%;
+  }
+  50%{
+    left: 25%;
+  }
+  100% {
+   left:  75%;
+  }
 }
