--- a/style2.css
+++ b/style2.css
@@ -1,19 +1,17 @@
-.fas fa-ghost {
+
+div {
+
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   margin-left: -25px;
   margin-top: -25px;
 
-  animation: color-shift 3s;
+  animation: 6s initial color-shift ;
+  animation-duration: 6s;
+  animation-name: initial;
+  animation-timing-function: ease-in-out;
+
 }
-@keyframes color-shift {
-  0% {
-    background-color: rgb(0, 0, 0);
-  }
-  
-  100% {
-    background-color: rgb(255, 255, 255);
-  }
