--- a/style2.css
+++ b/style2.css
@@ -7,7 +7,7 @@ div {
   margin-left: -25px;
   margin-top: -25px;
 
-  animation-name: move-sideways;
+  animation-name:color-shift, move-sideways ;
   animation-duration: 3s, 4s, 5s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
@@ -15,7 +15,15 @@ div {
   animation-timing-function: ease-in-out;
 }
 @keyframes color-shift {
-  
+  0%{
+   color: turquoise;
+  }
+  50% {
+    color: black;
+  }
+  100% {
+    color: red;
+  }
 }
 @keyframes move-sideways {
   0% {
